# BayesianMultivariateLatentFactors

./: README.md
MultivariateBLF/: pyproject.toml
MultivariateBLF/src/MultivariateBLF/: MultivariateBLF.py  PartialLeastSquares.py  gp_kernels.py  helpers.py  prior_predictive_helper.py  stan_helper.py  visualization.py
MultivariateBLF/src/MultivariateBLF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MultivariateBLF/src/MultivariateBLF/stan/: MBLF_D2_MGPSTrue_local_shrinkageTrue_heteroscedastic[True, False].stan
MultivariateBLF/src/tests/: test_functional_data.py
coverage_estimation_multiple/: README.md  boxplots.py  coverage_estimation_multiple.py  explore_coverage_results.stan  explore_coverage_results_skewnormal.stan  explore_results.py
figure2_confronto_processigaussiani_con_tau_riscalato/: code2.py
gait/: explore.ipynb  explore_de_meaned.ipynb  explore_de_meaned_K4.ipynb
gait/data/: README.md  gait.csv
prediction ability/: plot.py
verify_robustness_to_misspecifications/: explore_results.py  simulations.py
verify_robustness_to_misspecifications/N30_K3_truth_bsplines/: combined_coverage_all_methods.csv  faster_exploration.ipynb
verify_robustness_to_misspecifications/N30_K3_truth_fourier/: combined_coverage_all_methods.csv  faster_exploration.ipynb
